[package]
name = "example"
version = "0.1.0"
edition = "2021"

[dependencies]
tekenen = { path = "../tekenen", features = ["image", "server", "native"] }
rouille = "3.6.2"
wasm-bindgen = "0.2.73"

[build-dependencies]
tekenen = { path = "../tekenen", features = ["preloader"] }

[profile.release]
debug = true

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false