[package]
name = "example"
version = "0.1.0"
edition = "2021"

[dependencies]
tekenen = { path = "../tekenen", features = ["image", "native", "server"] }
# tekenen = { path = "../tekenen", features = ["image", "native"] }
wasm-bindgen = "0.2.73"

[build-dependencies]
tekenen = { path = "../tekenen", features = ["preloader", "wasm"] }
# tekenen = { path = "../tekenen", features = ["preloader"] }

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "example"
path = "src/lib.rs"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false