[package]
name = "tekenen"
version = "0.0.5"
edition = "2021"
description = "Simple library for drawing pixels in memory."
readme = "README.md"
license = "MIT"
repository = "https://github.com/Fritz179/tekenen"
documentation = "https://docs.rs/tekenen"

[dependencies]
image = { version = "0.24.6", optional = true }

# For native features
sdl2 = { version ="0.35", optional = true }

# For wasm features
wasm-bindgen = { version = "0.2.73", optional = true }

[features]

# binary creates window with sdl2
native = ["sdl2"]

# output html with js + wasm
wasm = ["wasm-bindgen"]

# Also serve the wasm file with a simple http server
server = ["wasm"]

# Run directy in the console, this disables some functionalities
console = []

# Preparse images and generate assets at compile time
preloader = ["image"]