[package]
name = "tekenen"
version = "0.0.5"
edition = "2021"
description = "Simple library for drawing pixels in memory."
readme = "README.md"
license = "MIT"
repository = "https://github.com/Fritz179/tekenen"
documentation = "https://docs.rs/tekenen"

# General dependecies
[dependencies]
image = { version = "0.24.6", optional = true }

# WASM target
[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = { version = "0.2.73", optional = true }

# Native target
[target.'cfg(not(target_family = "wasm"))'.dependencies]
sdl2 = { version ="0.35", optional = true}


[features]

# binary creates window with sdl2
native = ["sdl2"]

# output html with js + wasm
# wasm-pack build ./example/ --target web --out-dir ./home/wasm
wasm = ["wasm-bindgen"]

# Serve the wasm file with a simple http server, this also compiles the wasm file
server = ["wasm-bindgen"]

# Run directy in the console, this disables some functionalities
console = []

# Preparse images and generate assets at compile time
preloader = ["image"]
