[package]
name = "tekenen"
version = "0.0.5"
edition = "2021"
description = "Simple library for drawing pixels in memory."
readme = "README.md"
license = "MIT"
repository = "https://github.com/Fritz179/tekenen"
documentation = "https://docs.rs/tekenen"

# General dependecies
[dependencies]
image = { version = "0.24.6", optional = true }
enum_dispatch = "0.3.0"

# Enable wasm for debugging
# wasm-bindgen = { version = "0.2.73" }

# WASM target
[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = { version = "0.2.73" }

# Native target
[target.'cfg(not(target_family = "wasm"))'.dependencies]
sdl2 = { version ="0.35", optional = true}
rouille = { version = "3.6.2", optional = true}


[features]

# binary creates window with sdl2
native = ["sdl2"]

# output html with js + wasm
# wasm-pack build ./example/ --target web --out-dir ./home/wasm
wasm = []

# Serve the wasm file with a simple http server, this also compiles the wasm file
server = ["rouille"]

# Run directy in the console, this disables some functionalities
console = []

# Preparse images and generate assets at compile time
preloader = ["image"]
